--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,10 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: classes_M1
     - name: Build
       run: dotnet build --no-restore
+      working-directory: classes_M1
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: classes_M1
